# katip-wai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ChangeLog.md  README.md  cabal.project  fourmolu.yaml  ghc-9.2.1.cabal.project  katip-wai.cabal  package.yaml
.github/actions/: cabal-build.yaml
.github/actions/cabal-build/: action.yaml
.github/actions/stack-build/: action.yaml
.github/workflows/: ci.yaml  upload.yaml
example/: Main.hs  cabal.project  example.cabal  katip-wai-example.cabal  my-katip-wai-example.cabal  package.yaml  stack.yaml
example/app/: Main.hs
example/src/Katip/Wai/: Example.hs
example/src/Katip/Wai/Example/: AppData.hs  AppM.hs  Middleware.hs  Servant.hs  Short.hs
scripts/: publish.sh  test.sh  update-docs.sh
src/Katip/: Wai.hs
src/Katip/Wai/: Middleware.hs  Options.hs  Request.hs  Response.hs
test/: DebugApplication.hs  DebugScribe.hs  LogEntry.hs  Main.hs  Spec.hs
test/Katip/: WaiSpec.hs
test/Katip/Wai/: DebugApplication.hs  DebugScribe.hs  LogEntry.hs
